--- a/index.html
+++ b/index.html
@@ -1247,7 +1247,7 @@
             <div class="about-content">
                 <div class="about-image-container">
                     <div class="oval-frame">
-                        <img src="public/selfie_full.webp" alt="Syifa Luthfiyah">
+                        <img src="public/selfie_full.webp" alt="Syifa Luthfiyah" loading="lazy">
                     </div>
                 </div>
                 <div class="about-text">
@@ -1312,7 +1312,7 @@
             </div>
             <div class="identity-content">
                 <div class="identity-image">
-                    <img src="public/selfie_rektorat.webp" alt="Professional Identity">
+                    <img src="public/selfie_rektorat.webp" alt="Professional Identity" loading="lazy">
                 </div>
                 <div class="identity-text">
                     <h3>Administrative Professional & Educator</h3>
@@ -1341,13 +1341,13 @@
                 </div>
                 <div class="experience-gallery">
                     <div class="gallery-item">
-                        <img src="public/setneg1.webp" alt="Government Work 1" class="zoomable-image">
+                        <img src="public/setneg1.webp" alt="Government Work 1" class="zoomable-image" loading="lazy">
                     </div>
                     <div class="gallery-item">
-                        <img src="public/setneg2.webp" alt="Government Work 2" class="zoomable-image">
+                        <img src="public/setneg2.webp" alt="Government Work 2" class="zoomable-image" loading="lazy">
                     </div>
                     <div class="gallery-item">
-                        <img src="public/setneg3.webp" alt="Government Work 3" class="zoomable-image">
+                        <img src="public/setneg3.webp" alt="Government Work 3" class="zoomable-image" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -1374,13 +1374,13 @@ departments within the faculty.</p>
                 </div>
                 <div class="experience-gallery">
                     <div class="gallery-item">
-                        <img src="public/BEM.webp" alt="BEM Work 1" class="zoomable-image">
+                        <img src="public/BEM.webp" alt="BEM Work 1" class="zoomable-image" loading="lazy">
                     </div>
                     <div class="gallery-item">
-                        <img src="public/BEM2.webp" alt="BEM Work 2" class="zoomable-image">
+                        <img src="public/BEM2.webp" alt="BEM Work 2" class="zoomable-image" loading="lazy">
                     </div>
                     <div class="gallery-item">
-                        <img src="public/BEM3.webp" alt="BEM Work 3" class="zoomable-image">
+                        <img src="public/BEM3.webp" alt="BEM Work 3" class="zoomable-image" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -1406,13 +1406,13 @@ departments within the faculty.</p>
                 </div>
                 <div class="experience-gallery">
                     <div class="gallery-item">
-                        <img src="public/magangmekkah1.webp" alt="Education Work 1" class="zoomable-image">
+                        <img src="public/magangmekkah1.webp" alt="Education Work 1" class="zoomable-image" loading="lazy">
                     </div>
                     <div class="gallery-item">
-                        <img src="public/magangmekkah2.webp" alt="Education Work 2" class="zoomable-image">
+                        <img src="public/magangmekkah2.webp" alt="Education Work 2" class="zoomable-image" loading="lazy">
                     </div>
                     <div class="gallery-item">
-                        <img src="public/magangmekkah3.webp" alt="Education Work 3" class="zoomable-image">
+                        <img src="public/magangmekkah3.webp" alt="Education Work 3" class="zoomable-image" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -1549,37 +1549,37 @@ departments within the faculty.</p>
                 <div class="carousel-wrapper">
                     <div class="carousel-track">
                         <div class="carousel-slide">
-                            <img src="public/sertif/Kumpulan Sertifikat Pelatihan Skill dan Organisasi_1.webp" alt="Certificate 1" class="zoomable-image">
+                            <img src="public/sertif/Kumpulan Sertifikat Pelatihan Skill dan Organisasi_1.webp" alt="Certificate 1" class="zoomable-image" loading="lazy">
                         </div>
                         <div class="carousel-slide">
-                            <img src="public/sertif/Kumpulan Sertifikat Pelatihan Skill dan Organisasi_2.webp" alt="Certificate 2" class="zoomable-image">
+                            <img src="public/sertif/Kumpulan Sertifikat Pelatihan Skill dan Organisasi_2.webp" alt="Certificate 2" class="zoomable-image" loading="lazy">
                         </div>
                         <div class="carousel-slide">
-                            <img src="public/sertif/Kumpulan Sertifikat Pelatihan Skill dan Organisasi_3.webp" alt="Certificate 3" class="zoomable-image">
+                            <img src="public/sertif/Kumpulan Sertifikat Pelatihan Skill dan Organisasi_3.webp" alt="Certificate 3" class="zoomable-image" loading="lazy">
                         </div>
                         <div class="carousel-slide">
-                            <img src="public/sertif/Kumpulan Sertifikat Pelatihan Skill dan Organisasi_4.webp" alt="Certificate 4" class="zoomable-image">
+                            <img src="public/sertif/Kumpulan Sertifikat Pelatihan Skill dan Organisasi_4.webp" alt="Certificate 4" class="zoomable-image" loading="lazy">
                         </div>
                         <div class="carousel-slide">
-                            <img src="public/sertif/Kumpulan Sertifikat Pelatihan Skill dan Organisasi_6.webp" alt="Certificate 6" class="zoomable-image">
+                            <img src="public/sertif/Kumpulan Sertifikat Pelatihan Skill dan Organisasi_6.webp" alt="Certificate 6" class="zoomable-image" loading="lazy">
                         </div>
                         <div class="carousel-slide">
-                            <img src="public/sertif/Kumpulan Sertifikat Pelatihan Skill dan Organisasi_7.webp" alt="Certificate 7" class="zoomable-image">
+                            <img src="public/sertif/Kumpulan Sertifikat Pelatihan Skill dan Organisasi_7.webp" alt="Certificate 7" class="zoomable-image" loading="lazy">
                         </div>
                         <div class="carousel-slide">
-                            <img src="public/sertif/Kumpulan Sertifikat Pelatihan Skill dan Organisasi_8.webp" alt="Certificate 8" class="zoomable-image">
+                            <img src="public/sertif/Kumpulan Sertifikat Pelatihan Skill dan Organisasi_8.webp" alt="Certificate 8" class="zoomable-image" loading="lazy">
                         </div>
                         <div class="carousel-slide">
-                            <img src="public/sertif/Kumpulan Sertifikat Pelatihan Skill dan Organisasi_9.webp" alt="Certificate 9" class="zoomable-image">
+                            <img src="public/sertif/Kumpulan Sertifikat Pelatihan Skill dan Organisasi_9.webp" alt="Certificate 9" class="zoomable-image" loading="lazy">
                         </div>
                         <div class="carousel-slide">
-                            <img src="public/sertif/Kumpulan Sertifikat Pelatihan Skill dan Organisasi_10.webp" alt="Certificate 10" class="zoomable-image">
+                            <img src="public/sertif/Kumpulan Sertifikat Pelatihan Skill dan Organisasi_10.webp" alt="Certificate 10" class="zoomable-image" loading="lazy">
                         </div>
                         <div class="carousel-slide">
-                            <img src="public/sertif/Kumpulan Sertifikat Pelatihan Skill dan Organisasi_11.webp" alt="Certificate 11" class="zoomable-image">
+                            <img src="public/sertif/Kumpulan Sertifikat Pelatihan Skill dan Organisasi_11.webp" alt="Certificate 11" class="zoomable-image" loading="lazy">
                         </div>
                         <div class="carousel-slide">
-                            <img src="public/sertif/Kumpulan Sertifikat Pelatihan Skill dan Organisasi_12.webp" alt="Certificate 12" class="zoomable-image">
+                            <img src="public/sertif/Kumpulan Sertifikat Pelatihan Skill dan Organisasi_12.webp" alt="Certificate 12" class="zoomable-image" loading="lazy">
                         </div>
                     </div>
                 </div>
