--- a/index.html
+++ b/index.html
@@ -908,9 +908,10 @@
         /* Final Section */
         .final-section {
             background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
-            padding: 80px 0;
-            position: relative;
-            overflow: hidden;
+          padding-top: 40px;
+    padding-bottom: 0;
+    position: relative;
+    overflow: hidden;
         }
 
         .final-container {
@@ -930,7 +931,7 @@
 
         .final-text h2 {
             font-size: 3.5rem;
-            margin-bottom: 2rem;
+            margin-bottom: 1.5rem;
             color: var(--white-color);
             font-weight: 900;
             letter-spacing: 2px;
@@ -938,8 +939,8 @@
 
         .final-text p {
             font-size: 1.2rem;
-            line-height: 1.9;
-            margin-bottom: 2.5rem;
+            line-height: 1.5;
+            margin-bottom: 1.5rem;
             color: rgba(255, 255, 255, 0.9);
             font-family: 'Cormorant Garamond', serif;
         }
@@ -949,7 +950,7 @@
             gap: 1.5rem;
             flex-wrap: wrap;
             justify-content: center;
-            margin-bottom: 2.5rem;
+            margin-bottom: 1.5rem;
         }
 
         .btn-final {
@@ -986,7 +987,7 @@
             flex-wrap: wrap;
             gap: 1.5rem;
             justify-content: center;
-            margin-bottom: 2rem;
+            margin-bottom: 1rem;
         }
 
         .contact-item {
@@ -1042,12 +1043,14 @@
         }
 
         /* Footer */
-        footer {
-            background-color: var(--dark-color);
-            color: var(--white-color);
-            padding: 1rem 0;
-            text-align: center;
-        }
+         footer {
+    background-color: var(--dark-color);
+    color: var(--white-color);
+    padding: 1rem 0;
+    text-align: center;
+    font-size: 0.8rem; /* <-- Atau gunakan nilai ini */
+}
+  
 
         /* --- NEW: MODAL (LIGHTBOX) STYLES --- */
         .modal {
@@ -1343,8 +1346,10 @@
                     <img src="public/selfie_rektorat.webp" alt="Professional Identity" loading="lazy">
                 </div>
                 <div class="identity-text">
-                    <h3>Administrative Professional & Educator</h3>
-                    <p>Specializing in efficient administrative support, clear communication, and educational facilitation. My background in humanities provides me with unique analytical and interpersonal skills applicable to any professional environment. I bring a blend of creativity and structure to every project, ensuring both innovation and reliability in my work.</p>
+                    <h3>Professional Administrative, Design Creator & Educator</h3>
+                    <p>Specializing in efficient administrative support, clear communication, and inspirational educational facilitation.
+​Leveraging a rich background in the humanities, I bring a unique combination of deep analytical skills and strong interpersonal abilities, applicable across diverse professional environments.
+​I integrate administrative meticulousness with a creative design vision and experience as an educator, ensuring every project is not only structured and reliable but also innovative, visually compelling, and effective in its message delivery. I am dedicated to providing a balance between creativity and structure in all my work.</p>
                 </div>
             </div>
         </div>
@@ -1754,7 +1759,6 @@ departments within the faculty.</p>
                             <i class="fab fa-tiktok"></i>
                         </a>
                     </div>
-                    <p style="margin-top: 20px;">By : Tarasyah.production</p>
                 </div>
             </div>
         </div>
